[package]
name = "winroute"
version = "0.1.0"
edition = "2021"
author = "ljkgpxs <ljkgpxs@gmail.com>"
description = "This crate is a utilities of high level of interface for manipulating and observing Windows's routing table"
repository = "https://github.com/ljkgpxs/winroute"
homepage = "https://github.com/ljkgpxs/winroute"
readme = "README.md"
keywords = [
    "windows",
    "route",
    "manager",
    "gateway",
    "interface",
]
license = "Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "netioapi"] }
