[package]
name = "winroute"
version = "0.2.0"
edition = "2021"
authors = ["ljkgpxs <ljkgpxs@gmail.com>"]
description = "This crate is a utilities of high level of interface for manipulating and observing Windows's routing table"
repository = "https://github.com/ljkgpxs/winroute"
homepage = "https://github.com/ljkgpxs/winroute"
readme = "README.md"
keywords = [
    "windows",
    "route",
    "manager",
    "gateway",
    "interface",
]
license = "Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
serde = {version = "1.0", features = ["derive"], optional = true}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["iphlpapi", "netioapi"] }

[dev-dependencies]
serde_json = {version = "1.0"}

[features]
default = ["serializable"]
serializable  = ["serde"]
