[package]
name = "winroute"
version = "0.2.2"
edition = "2024"
authors = ["ljkgpxs <ljkgpxs@gmail.com>"]
description = "This crate is a utilities of high level of interface for manipulating and observing Windows's routing table"
repository = "https://github.com/ljkgpxs/winroute"
homepage = "https://github.com/ljkgpxs/winroute"
readme = "README.md"
keywords = [
    "windows",
    "route",
    "manager",
    "gateway",
    "interface",
]
license = "Apache-2.0"

[dependencies]
crossbeam-channel = "0.5"
serde = {version = "1.0", features = ["derive"], optional = true}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0" , features = ["Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis"]}

[dev-dependencies]
serde_json = {version = "1.0"}

[features]
default = ["serializable"]
serializable  = ["serde"]
